k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: promise-ai
  labels:
    name: promise-ai
    environment: production
